--- a/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
@@ -361,6 +361,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Reports\Analytics\CarrierProfile.rdlc" />
+    <EmbeddedResource Include="Reports\Analytics\rdlCarrierDetailedSummary.rdlc">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Reports\Analytics\rdlCarrierDailyTraffic.rdlc" />
     <EmbeddedResource Include="Reports\Analytics\rdlCarrierLostSummary.rdlc">
       <SubType>Designer</SubType>
