changing file names
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23812

--- a/TOneV2/Code/TOneV2/TOne.BusinessEntity.Web/TOne.BusinessEntity.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.BusinessEntity.Web/TOne.BusinessEntity.Web.csproj
@@ -133,10 +133,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Client\Constant\AccountType.js" />
+    <Content Include="Client\Constant\AccountTypeEnum.js" />
     <Content Include="Client\Constant\ActivationStatusEnum.js" />
     <Content Include="Client\Constant\PaymentTypeEnum.js" />
-    <Content Include="Client\Constant\RoutingStatus.js" />
+    <Content Include="Client\Constant\RoutingStatusEnum.js" />
     <Content Include="Client\Services\APIServices\BusinessEntityAPIService.js" />
     <Content Include="Client\Services\APIServices\CarrierAPIService.js" />
     <Content Include="Client\Services\APIServices\SwitchManagmentAPIService.js" />
