--- a/CLITester/VoIPSwitchService1/App.config
+++ b/CLITester/VoIPSwitchService1/App.config
@@ -5,6 +5,10 @@
   </startup>
   <appSettings>
     <add key="ExpiryTime" value="60" />
+    <add key="LineAvailable" value="20" />
+    <add key="SendingEmail" value="vanrise.clitester@gmail.com" />
+    <add key="SmtpServer" value="smtp.gmail.com" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <connectionStrings>
     <add name="MySQL" connectionString="SERVER=192.168.22.23; DATABASE=voipswitch; UID=hadi; PASSWORD=h@d!" providerName="MySql.Data.MySqlClient" />
