Add DailyForcasting Entities
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23839

--- a/TOneV2/Code/TOneV2/TOne.Analytics.Entities/TOne.Analytics.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Entities/TOne.Analytics.Entities.csproj
@@ -51,7 +51,10 @@
     <Compile Include="Billing\CarrierSummaryDaily.cs" />
     <Compile Include="Billing\CarrierSummaryDailyFormatted.cs" />
     <Compile Include="Billing\CarrierSummaryFormatted.cs" />
+    <Compile Include="Billing\DailyForcasting.cs" />
+    <Compile Include="Billing\DailyForcastingFormatted.cs" />
     <Compile Include="Billing\Enumerations.cs" />
+    <Compile Include="Billing\MyInterpolation.cs" />
     <Compile Include="Billing\ProfitSummary.cs" />
     <Compile Include="Billing\SaleAmountSummary.cs" />
     <Compile Include="Billing\CustomerSummary.cs" />
