git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23870

--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/Vanrise.Fzero.FraudAnalysis.Web.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/Vanrise.Fzero.FraudAnalysis.Web.csproj
@@ -151,6 +151,8 @@
     <Content Include="FraudAnalysis\Services\APIServices\StrategyAPIService.js" />
     <Content Include="FraudAnalysis\Views\FraudResultManagement.html" />
     <Content Include="FraudAnalysis\Views\FraudResultManagementController.js" />
+    <Content Include="FraudAnalysis\Views\SuspiciousNumberDetailsEditor.html" />
+    <Content Include="FraudAnalysis\Views\SuspiciousNumberDetailsEditorController.js" />
     <Content Include="FraudAnalysis\Views\StrategyManagement.html" />
     <Content Include="FraudAnalysis\Views\StrategyManagementController.js" />
     <Content Include="FraudAnalysis\Views\StrategyEditor.html" />
