--- a/Vanrise/Code/Vanrise.Web/Vanrise.Web.csproj
+++ b/Vanrise/Code/Vanrise.Web/Vanrise.Web.csproj
@@ -494,6 +494,7 @@
     <Content Include="Client\Libraries\waves\waves.js" />
     <Content Include="Client\Modules\Common\Views\Error.html" />
     <Content Include="Client\Modules\Common\Views\ErrorController.js" />
+    <Content Include="Client\Modules\Common\Views\StartupPage.html" />
     <Content Include="Client\Styles\angular-motion.css" />
     <Content Include="Client\Styles\angular-notify.css" />
     <Content Include="Client\Styles\angular-ui-switch.css" />
