--- a/TOneV2/Code/TOneV2/TOne.Analytics.Entities/TOne.Analytics.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Entities/TOne.Analytics.Entities.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Billing\MonthTraffic.cs" />
     <Compile Include="Billing\RateLoss.cs" />
     <Compile Include="Billing\RateLossFormatted.cs" />
+    <Compile Include="Billing\TimeRange.cs" />
     <Compile Include="Billing\TotalDurationPerDate.cs" />
     <Compile Include="Billing\VariationReports.cs" />
     <Compile Include="Billing\VariationReportsData.cs" />
