Add Carrier Exchange Report
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23903

--- a/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
@@ -380,6 +380,7 @@
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Reports\Analytics\rdlCarrierDailyTraffic.rdlc" />
+    <EmbeddedResource Include="Reports\Analytics\rdlCarrierExchangeSummary.rdlc" />
     <EmbeddedResource Include="Reports\Analytics\rdlCarrierLostSummary.rdlc">
       <SubType>Designer</SubType>
     </EmbeddedResource>
