--- a/TOneV2/Code/TOneV2/TOne.BI.Data/TOne.BI.Data.csproj
+++ b/TOneV2/Code/TOneV2/TOne.BI.Data/TOne.BI.Data.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BIDataManagerFactory.cs" />
+    <Compile Include="IBIConfigurationDataManager.cs" />
     <Compile Include="IDataManager.cs" />
     <Compile Include="IGenericEntityDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
