Add Tracking modal
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23922

--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Web/Vanrise.BusinessProcess.Web.csproj
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Web/Vanrise.BusinessProcess.Web.csproj
@@ -137,6 +137,8 @@
     <Content Include="BusinessProcess\Services\BusinessProcessAPIService.js" />
     <Content Include="BusinessProcess\Views\BPManagement.html" />
     <Content Include="BusinessProcess\Views\BPManagementController.js" />
+    <Content Include="BusinessProcess\Views\BPTrackingModal.html" />
+    <Content Include="BusinessProcess\Views\BPTrackingModalController.js" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
