--- a/TOneV2/Code/TOneV2/TOne.Web/Web.config
+++ b/TOneV2/Code/TOneV2/TOne.Web/Web.config
@@ -19,6 +19,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="BICubeName" value="BISLT One Day" />
+    <add key="SecurityDBConnStringKey" value="MainDBConnString"/>
   </appSettings>
   <system.web>
     <httpHandlers>
