--- a/TOneV2/Code/TOneV2/TOne.LCR.Web/TOne.LCR.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.LCR.Web/TOne.LCR.Web.csproj
@@ -107,6 +107,10 @@
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.AspNet.WebPages.3.0.0\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.Entities, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Entities.dll</HintPath>
+    </Reference>
     <Reference Include="WebGrease">
       <Private>True</Private>
       <HintPath>..\packages\WebGrease.1.5.2\lib\WebGrease.dll</HintPath>
@@ -123,6 +127,7 @@
     <Compile Include="Controllers\RouteRulesController.cs" />
     <Compile Include="Controllers\RoutingController.cs" />
     <Compile Include="ModelMappers\Mappers.cs" />
+    <Compile Include="Models\OptionsModel.cs" />
     <Compile Include="Models\RouteDetailModel.cs" />
     <Compile Include="Models\RouteRuleModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -130,10 +135,13 @@
   <ItemGroup>
     <Content Include="Routing\Constants\CodeSetTypeEnum.js" />
     <Content Include="Routing\Constants\CustomerSetsEnum.js" />
+    <Content Include="Routing\Constants\RouteDetailFilterOrderEnum.js" />
     <Content Include="Routing\Constants\RoutingRulesEnum.js" />
     <Content Include="Routing\Constants\RoutingRulesTemplatesEnum.js" />
     <Content Include="Routing\Services\RoutingAPIService.js" />
     <Content Include="Routing\Services\RoutingRulesAPIService.js" />
+    <Content Include="Routing\Views\RoutingManagement\RoutingManagementController.js" />
+    <Content Include="Routing\Views\RoutingManagement\RoutingManagement.html" />
     <Content Include="Routing\Views\RoutingRules\EditorTemplates\CodeTemplateController.js" />
     <Content Include="Routing\Views\RoutingRules\EditorTemplates\CodeTemplate.html" />
     <Content Include="Routing\Views\RoutingRules\EditorTemplates\CustomerTemplateController.js" />
