--- a/TOneV2/Code/TOneV2/TOne.BI.Web/TOne.BI.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.BI.Web/TOne.BI.Web.csproj
@@ -121,38 +121,38 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Client\Constants\BIEntityTypeEnum.js" />
-    <Content Include="Client\Constants\BIMeasureTypeEnum.js" />
-    <Content Include="Client\Constants\BITimeDimensionTypeEnum.js" />
-    <Content Include="Client\Directives\vr-bi-chart-directive.js" />
-    <Content Include="Client\Directives\vr-bi-datagrid-directive.js" />
-    <Content Include="Client\Directives\bi-visualelement-service.js" />
-    <Content Include="Client\Directives\bi-visualelement-service1.js" />
-    <Content Include="Client\Directives\vr-datagrid-bi-directive.js" />
-    <Content Include="Client\Services\APIServices\BIAPIService.js" />
-    <Content Include="Client\Services\APIServices\BIConfigurationAPIService.js" />
-    <Content Include="Client\Directives\vr-chart-bi-directive.js" />
-    <Content Include="Client\Views\Dashboards\DynamicDashboadTemplates\VisualElementEditorController.js" />
-    <Content Include="Client\Views\Dashboards\DynamicDashboadTemplates\VisualElementEditor.html" />
-    <Content Include="Client\Views\Dashboards\DynamicDashboard.html" />
-    <Content Include="Client\Views\Dashboards\DynamicDashboardController.js" />
-    <Content Include="Client\Views\Dashboards\SeniorManagementDashboardController.js" />
-    <Content Include="Client\Views\Dashboards\TopManagementDashboardController.js" />
-    <Content Include="Client\Views\Dashboards\ZoneDashboardController.js" />
-    <Content Include="Client\Views\Reports\EntityReport.html" />
-    <Content Include="Client\Views\Reports\EntityReportController.js" />
-    <Content Include="Client\Views\Reports\EntityReportTemplates\EntityReportResult.html" />
-    <Content Include="Client\Views\Reports\EntityReportTemplates\EntityReportResultController.js" />
-    <Content Include="Client\Views\Reports\ZoneDetailsController.js" />
-    <Content Include="Client\Views\Reports\ZoneSummaryController.js" />
-    <Content Include="Client\Services\bi-utilities-service.js" />
-    <Content Include="Client\Views\Dashboards\SeniorManagementDashboard.html" />
-    <Content Include="Client\Views\Dashboards\TopManagementDashboard.html" />
-    <Content Include="Client\Views\Dashboards\ZoneDashboard.html" />
-    <Content Include="Client\Views\Reports\ZoneDetails.html" />
-    <Content Include="Client\Views\Reports\ZoneSummary.html" />
-    <Content Include="Client\Views\Test.html" />
-    <Content Include="Client\Views\Test.js" />
+    <Content Include="BI\Constants\BIEntityTypeEnum.js" />
+    <Content Include="BI\Constants\BIMeasureTypeEnum.js" />
+    <Content Include="BI\Constants\BITimeDimensionTypeEnum.js" />
+    <Content Include="BI\Directives\vr-bi-chart-directive.js" />
+    <Content Include="BI\Directives\vr-bi-datagrid-directive.js" />
+    <Content Include="BI\Directives\bi-visualelement-service.js" />
+    <Content Include="BI\Directives\bi-visualelement-service1.js" />
+    <Content Include="BI\Directives\vr-datagrid-bi-directive.js" />
+    <Content Include="BI\Services\APIServices\BIAPIService.js" />
+    <Content Include="BI\Services\APIServices\BIConfigurationAPIService.js" />
+    <Content Include="BI\Directives\vr-chart-bi-directive.js" />
+    <Content Include="BI\Views\Dashboards\DynamicDashboadTemplates\VisualElementEditorController.js" />
+    <Content Include="BI\Views\Dashboards\DynamicDashboadTemplates\VisualElementEditor.html" />
+    <Content Include="BI\Views\Dashboards\DynamicDashboard.html" />
+    <Content Include="BI\Views\Dashboards\DynamicDashboardController.js" />
+    <Content Include="BI\Views\Dashboards\SeniorManagementDashboardController.js" />
+    <Content Include="BI\Views\Dashboards\TopManagementDashboardController.js" />
+    <Content Include="BI\Views\Dashboards\ZoneDashboardController.js" />
+    <Content Include="BI\Views\Reports\EntityReport.html" />
+    <Content Include="BI\Views\Reports\EntityReportController.js" />
+    <Content Include="BI\Views\Reports\EntityReportTemplates\EntityReportResult.html" />
+    <Content Include="BI\Views\Reports\EntityReportTemplates\EntityReportResultController.js" />
+    <Content Include="BI\Views\Reports\ZoneDetailsController.js" />
+    <Content Include="BI\Views\Reports\ZoneSummaryController.js" />
+    <Content Include="BI\Services\bi-utilities-service.js" />
+    <Content Include="BI\Views\Dashboards\SeniorManagementDashboard.html" />
+    <Content Include="BI\Views\Dashboards\TopManagementDashboard.html" />
+    <Content Include="BI\Views\Dashboards\ZoneDashboard.html" />
+    <Content Include="BI\Views\Reports\ZoneDetails.html" />
+    <Content Include="BI\Views\Reports\ZoneSummary.html" />
+    <Content Include="BI\Views\Test.html" />
+    <Content Include="BI\Views\Test.js" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\Vanrise\Code\Vanrise.Web.Base\Vanrise.Web.Base.csproj">
