--- a/TOneV2/Code/TOneV2/TestRuntime/app.config
+++ b/TOneV2/Code/TOneV2/TestRuntime/app.config
@@ -36,7 +36,7 @@
     <!--<add name="MainDBConnString" connectionString="Server=192.168.18.6;Database=TOneDemoNew;User ID=sa;Password=password"/>-->
     <!--<add name="MainDBConnString" connectionString="Server=192.168.110.190;Database=MVTSProDemo;User ID=sa;Password=QC@cce$$"/>-->
     <!--<add name="MainDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=NettalkFidaa;Data Source=."/>-->
-    <add name="MainDBConnString" connectionString="Server=192.168.110.190;Database=MVTSProDemo;User ID=qa;Password=qa123"/>
+    <add name="MainDBConnString" connectionString="Server=192.168.110.185;Database=TOneDevTest01;User ID=Development;Password=dev!123"/>
     <!--<add name="MainDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=NettalkFidaa;Data Source=."/>-->
     <add name="CDRTargetDBConnString" connectionString="Server=192.168.110.185;Database=TOneDevTest01;User ID=Development;Password=dev!123"/>
     <add name="TransactionDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneTransactionDB;Data Source=."/>
@@ -189,6 +189,7 @@
     <add key="BCPDonotDeleteFiles" value="true"/>
     <add key="RebuildZoneRates" value="false"/>
     <add key="BCPCommandName" value="bcp"/>
+    <add key="BCPTempFilesDirectory" value="E:\BCPFiles" />
   </appSettings>
   <system.codedom>
     <compilers>
