CustomerRouting report Back-End
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23945

--- a/TOneV2/Code/TOneV2/TOne.Analytics.Entities/TOne.Analytics.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Entities/TOne.Analytics.Entities.csproj
@@ -51,6 +51,8 @@
     <Compile Include="Billing\CarrierSummaryDaily.cs" />
     <Compile Include="Billing\CarrierSummaryDailyFormatted.cs" />
     <Compile Include="Billing\CarrierSummaryFormatted.cs" />
+    <Compile Include="Billing\CustomerRouting.cs" />
+    <Compile Include="Billing\CustomerRoutingFormatted.cs" />
     <Compile Include="Billing\DailyForcasting.cs" />
     <Compile Include="Billing\DailyForcastingFormatted.cs" />
     <Compile Include="Billing\Enumerations.cs" />
