--- a/TOneV2/Code/TOneV2/TestRuntime/app.config
+++ b/TOneV2/Code/TOneV2/TestRuntime/app.config
@@ -184,12 +184,12 @@
     <add key="DropOldRoutingDatabasesInterval" value="00:01:00"/>
     <add key="BusinessProcessServiceHost" value="localhost:1833"/>
     <add key="BusinessProcessDisabledNamedPipeService" value="true"/>
-    <add key="RepricingParallelThreads" value="5"/>
+    <add key="RepricingParallelThreads" value="1"/>
     <add key="RoutingCodePrefixLength" value="2"/>
     <add key="BCPDonotDeleteFiles" value="true"/>
     <add key="RebuildZoneRates" value="false"/>
     <add key="BCPCommandName" value="bcp"/>
-    <add key="BCPTempFilesDirectory" value="E:\BCPFiles" />
+    <add key="BCPTempFilesDirectory" value="C:\BCPFiles" />
   </appSettings>
   <system.codedom>
     <compilers>
